--- a/previews/PR411/examples/docs_4_rational_opt/index.html
+++ b/previews/PR411/examples/docs_4_rational_opt/index.html
@@ -27,24 +27,24 @@ x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
 println(&quot;\nOutput type of solution: &quot;, eltype(x))</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Agnostic EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
-MOMENTUM: nothing GRADIENTTYPE: Nothing
+MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
 Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.369197e-01   1.862476e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.378154e-01   3.718748e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.388592e-01   5.567317e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.401824e-01   7.404906e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.417645e-01   9.229102e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.436230e-01   1.103706e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.466196e-01   1.280598e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.490159e-01   1.457153e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.516392e-01   1.631501e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.547043e-01   1.802762e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.557371e-01   1.817406e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.516504e-01   1.534565e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.533690e-01   3.061057e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.551988e-01   4.578763e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.572035e-01   6.086395e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.593345e-01   7.583404e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.616145e-01   9.068725e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.649156e-01   1.052765e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.675439e-01   1.198423e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.703575e-01   1.342567e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.733603e-01   1.485089e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.744535e-01   1.497509e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -60,23 +60,23 @@ Output type of solution: BigFloat</code></pre><p>Another possible step-size rule
 );</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Shortstep EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
-MOMENTUM: nothing GRADIENTTYPE: Nothing
+MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
 Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   2.976808e-01   3.359303e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   2.986412e-01   6.697000e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   2.998750e-01   1.000417e+02
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.014284e-01   1.327015e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.033529e-01   1.648246e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.055997e-01   1.963353e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.083257e-01   2.270326e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.113000e-01   2.569869e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.146781e-01   2.860066e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.183072e-01   3.141619e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.191423e-01   3.133399e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.258486e-01   3.068910e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.274555e-01   6.107699e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.289507e-01   9.119909e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.306242e-01   1.209833e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.325774e-01   1.503409e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.347695e-01   1.792278e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.372482e-01   2.075623e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.399604e-01   2.353216e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.429513e-01   2.624279e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.463704e-01   2.887083e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.472332e-01   2.879909e+02
 -------------------------------------------------------------------------------------------------
-  0.728631 seconds (1.28 M allocations: 70.618 MiB, 96.28% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 11 August 2023 12:38">Friday 11 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.769087 seconds (1.38 M allocations: 75.523 MiB, 96.07% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 21 August 2023 13:48">Monday 21 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
