--- a/dev/examples/docs_4_rational_opt/index.html
+++ b/dev/examples/docs_4_rational_opt/index.html
@@ -28,23 +28,23 @@ println(&quot;\nOutput type of solution: &quot;, eltype(x))</code></pre><pre cla
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Agnostic EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
 MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
-Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
+LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.182535e-01   1.617459e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.207581e-01   3.221867e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.230921e-01   4.814698e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.252303e-01   6.397643e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.282862e-01   7.958156e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.307886e-01   9.511903e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.339984e-01   1.104104e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.371117e-01   1.255667e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.405504e-01   1.405042e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.442746e-01   1.552133e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.455327e-01   1.564599e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.112777e-01   1.635918e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.130172e-01   3.262551e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.149246e-01   4.878647e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.169161e-01   6.483864e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.192042e-01   8.074881e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.231783e-01   9.628063e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.261323e-01   1.117975e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.295733e-01   1.270702e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.331754e-01   1.421407e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.367216e-01   1.570545e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.379445e-01   1.583210e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -61,22 +61,22 @@ Output type of solution: BigFloat</code></pre><p>Another possible step-size rule
 Vanilla Frank-Wolfe Algorithm.
 MEMORY_MODE: FrankWolfe.OutplaceEmphasis() STEPSIZE: Shortstep EPSILON: 1.0e-7 MAXITERATION: 100 TYPE: Rational{BigInt}
 MOMENTUM: nothing GRADIENTTYPE: Vector{Rational{BigInt}}
-Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
+LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
 
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.436081e-01   2.910292e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.461443e-01   5.777937e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.481587e-01   8.616761e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.505471e-01   1.141074e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.532868e-01   1.415281e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.564332e-01   1.683345e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.599222e-01   1.944865e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.637784e-01   2.199141e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.680391e-01   2.445392e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.727154e-01   2.683012e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.736998e-01   2.675945e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.212734e-01   3.112614e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.237130e-01   6.178312e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.257560e-01   9.209346e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.279039e-01   1.219869e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.304913e-01   1.512899e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.334683e-01   1.799271e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.369835e-01   2.077253e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.404996e-01   2.349488e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.447515e-01   2.610576e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.490137e-01   2.865217e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.498995e-01   2.857964e+02
 -------------------------------------------------------------------------------------------------
-  0.823511 seconds (1.38 M allocations: 75.389 MiB, 1.86% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 29 September 2023 14:56">Friday 29 September 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.792005 seconds (1.38 M allocations: 75.379 MiB, 1.62% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Saturday 30 September 2023 12:41">Saturday 30 September 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
